fixed scrolling the page from right to left leaves the gap on the left

--- a/style4.css
+++ b/style4.css
@@ -196,7 +196,7 @@ a.article:hover {
 ----------------------------------------------------- */
 
 #content {
-    width: 100%;
+    width: 150%;
     /*padding: 20px;  Padding Commented*/
     min-height: 100vh;
     transition: all 0.3s;
